--- a/styles/style.css
+++ b/styles/style.css
@@ -704,8 +704,13 @@ td {
 #wrapper_app {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
-  height: 100%;
+  width: 1920px;
+  height: 1080px;
+  position:absolute;
+  left:50%;
+  top:50%;
+  transform: translate(-50%, -50%);
+  /* width: 100vw; */
   justify-content: space-between;
 }
 
