--- a/styles/style.css
+++ b/styles/style.css
@@ -395,10 +395,12 @@ select[name='presentation'] option:checked {
   text-align: center;
   color: #fff;
   cursor: pointer;
+
 }
 
 #reset_calculator {
   justify-self: flex-end;
+  margin-right: 80px;
 }
 
 #clear_button {
@@ -610,11 +612,12 @@ td {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 90%;
-  height: 70%;
+  height: 85%;
   box-shadow: 0 0 103px 0 rgba(146, 146, 146, 0.24);
   z-index: 1000;
   background-color: #fff;
   visibility: hidden;
+  opacity: 0;
 }
 
 .popup_close {
@@ -639,7 +642,7 @@ td {
   transform: translate(-50%, -50%);
   max-width: 1580px;
   width: 100%;
-  height: 580px;
+  height: 850px;
   overflow: hidden;
   padding: 0 80px;
   touch-action: auto;
@@ -1044,6 +1047,18 @@ sup {
   background-color: #fff;
 }
 
+/* Calculator validation error message */
+.calc_error {
+  color: #D6412B;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.calc_error.show {
+  display: block !important;
+  visibility: visible !important;
+}
+
 .result_dosis {
   font-weight: bold;
 }
@@ -1057,7 +1072,7 @@ sup {
 #table_calculator_tbody tr:nth-child(1) td:nth-child(6) {
    border: none
  }
-.col_add_row td:nth-child(6),.total_info_tr td:nth-child(6) {
+ #table_calculator_tbody .col_add_row td:nth-child(6),.total_info_tr td:nth-child(6) {
    border: none!important;
 }
 
