--- a/styles/output.css
+++ b/styles/output.css
@@ -68,7 +68,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 250px;
+  /* height: 250px; */
   padding-right: 40px;
   padding-left: 40px;
 }
