--- a/styles/style.css
+++ b/styles/style.css
@@ -574,6 +574,7 @@ td {
 
 #table_wrapper {
   width: 100%;
+  /* height: 550px; */
   height: 575px;
   overflow: hidden;
   touch-action: auto;
@@ -868,6 +869,7 @@ td {
 
 .blur {
   filter: blur(13px);
+  pointer-events: none;
 }
 
 button {
@@ -1054,11 +1056,19 @@ sup {
 
 }
 
+#table_wrapper_calculator {
+  position: relative;
+  height: 630px;
+}
+
 /* Calculator validation error message */
 .calc_error {
   color: #D6412B;
   font-weight: bold;
-  margin-top: 10px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .calc_error.show {
