--- a/styles/style.css
+++ b/styles/style.css
@@ -1119,11 +1119,12 @@ sup {
 }
 
 #references {
-  position: absolute;
+  position: fixed;
   top: 50%;
-  left: -45px;
+  left: -55px;
   transform: translate(0, -50%) rotate(90deg);
   font-size: 12px;
+  z-index: 100;
 
 
 }
@@ -1155,6 +1156,7 @@ tr.col_add_row td:nth-child(7) {
   width: 250px;
   padding-right: 5px;
   padding-left: 5px;
+  cursor: pointer;
 }
 
 #popup_legales{
