--- a/styles/style.css
+++ b/styles/style.css
@@ -997,14 +997,26 @@ sup {
 
 
 #resumen_pdf_button {
+  position: relative;
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  text-decoration: none !important;
-  text-decoration: underline !important;
+  text-decoration: none;
+  /* text-decoration: underline; */
   color: #606773 !important;
   margin-bottom: 5px;
 
+}
+
+a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  /* ajuste la hauteur ici */
+  width: 100%;
+  height: 1px;
+  background: currentColor;
 }
 
 .icon_img {
